# ReasoningDistillFinal

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
bash_scripts/experimental/: dry_run_accuracy_evals.sh  dry_run_attention_intervention.sh  dry_run_attention_visualize.sh  dry_run_circuit_intersection.sh  dry_run_compute_circuit.sh  dry_run_data_generation.sh  dry_run_overlap_edges.sh
deepseek-r1-distill-qwen1.5b/: tokenizer_deepseek.json
qwen2.5-1.5b-instruct/: generation_config_qwen.json  tokenizer_qwen.json
qwen2.5-math-1.5b/: config_qwen_math.json  tokenizer_config_qwen_math.json  tokenizer_qwen_math.json
reasoning_mistake/: utils.py
reasoning_mistake/circuits_functions/: circuit_analysis.py  circuit_discovery.py
reasoning_mistake/circuits_functions/interpret/: attention_analysis.py  qk_analysis.py  vocab_projections.py
reasoning_mistake/circuits_functions/intervene/: attention_intervention.py  residual_intervention.py
reasoning_mistake/circuits_functions/visualize/: graph_utils.py
reasoning_mistake/data_preparation/: math_filterer.py  math_generator.py  seq_label_generator.py
scripts/: attention_interpretation.py  circuit_intersection_eval.py  circuit_overlap.py  eval_circuit.py  eval_intersection_C_A.py  eval_template_intersection.py  evals_on_models.py  filter_data.py  generate_data.py  identify_circuit.py  intervene_attention.py  intervene_residual.py  mlp_projections_interpretation.py  num_edges_vs_train_size.py  plot_circuit.py  plot_results.py  sparsity_faithfulness.py  test_deepseek_model.py  test_intersection.py
(+96 files in other folders)
